--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -86,7 +86,7 @@
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <picture>
-            <source media="screen and (max-width: 399px)" srcset="{{ box_n_woman | cloudinaryUrl(dpr=" 1", width=400) }} 1x,
+            <source media="screen and (max-width: 399px)" srcset="{{ box_n_woman | cloudinaryUrl(width=400) }} 1x,
                       {{ box_header | cloudinaryUrl(width=400) }} 1.5x,
                       {{ box_header | cloudinaryUrl(width=400) }} 2x">
             <source media="screen and (min-width: 400px) and (max-width: 599px)" srcset="{{ box_n_woman | cloudinaryUrl(width=420) }} 1x,
@@ -201,10 +201,10 @@
   {% include 'components/guarantee.njk' %}
   <div class="guarantee__bg">
     <picture>
-      <source media="screen and (max-width: 839px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=400) }} 1x,
+      <source media="screen and (max-width: 839px)" srcset="{{ box_header | cloudinaryUrl(width=400) }} 1x,
                       {{ box_header | cloudinaryUrl(width=420) }} 1.5x,
                       {{ box_header | cloudinaryUrl(width=420) }} 2x">
-      <source media="screen and (min-width: 840px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=860) }} 1x,
+      <source media="screen and (min-width: 840px)" srcset="{{ box_header | cloudinaryUrl(width=860) }} 1x,
                       {{ box_header | cloudinaryUrl(width=860) }} 1.5x,
                       {{ box_header | cloudinaryUrl(width=860) }} 2x">
       <img alt="Fotka PostCube" src="{{ box_header | cloudinaryUrl(dpr=" auto", width=860) }}" width="860" height="581">
