--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -48,7 +48,7 @@
     @media (min-width: 840px) and (max-width: 2039px) {
       .main-info {
         align-self: center;
-        background-image: url({{ box_header | cloudinaryUrl(dpr="auto", width=860) }});
+        background-image: url({{ box_n_woman | cloudinaryUrl(width=860) }});
         background-size: 45% auto;
         background-position: center left;
         background-repeat: no-repeat;
@@ -64,7 +64,7 @@
       .main-info {
         min-width: 700px;
         align-self: center;
-        background-image: url({{ box_header | cloudinaryUrl(dpr="auto", width=1020) }});
+        background-image: url({{ box_n_woman | cloudinaryUrl(width=1020) }});
         background-size: 45% auto;
         background-position: center left;
         background-repeat: no-repeat;
